Style fixes based on feedback from Emma -spacing between blocks -product development tag color -dashed lines -> dotted -large project boxes -> rounded corners taller images on project boxes

--- a/css/coil-site.scss
+++ b/css/coil-site.scss
@@ -57,15 +57,11 @@ h2 {
     content: "";
     display: inline-block;
     vertical-align: middle;
-    border-bottom: 1px dashed color('base-light');
+    border-bottom: 1px dotted color('base-light');
   }
   &:before {
     width: units($coil-left-padding) * .75;
     margin: 0 units($coil-left-padding) * .25 0 0;
-    // @include at-media('desktop') {
-    //   width: units($coil-left-padding-wide) * .75;
-    //   margin: 0 units($coil-left-padding-wide) * .25 0 0;
-    // }
   }
   &:after {
     width: 100%;
@@ -81,7 +77,7 @@ h2 {
 
 .coil-header {
   @include u-position('sticky');
-  @include u-top(0);
+  @include u-top('neg-2px');
   @include u-bg('base-darkest');
   @include white-links;
   @include u-border-bottom('2px', 'white');
@@ -114,13 +110,14 @@ h2 {
         @include u-width($theme-grid-container-max-width);
         @include u-margin-x('auto', !important);
       }
-      // &.abstract-icon {
-      //   @include u-width($theme-grid-container-max-width);
-      // }
     }
   }
   &:first-of-type, &:nth-child(2) {
     @include u-border-top(0);
+  }
+  &:nth-last-child(2) {
+    @include u-padding-top(0);
+    @include u-padding-bottom(4);
   }
   &:last-of-type {
     @include u-padding-bottom(10);
@@ -148,6 +145,10 @@ h2 {
 .coil-project-lg {
   @include grid-col(12);
   @include u-margin-y(2);
+  .project-content {
+    @include u-radius('md');
+
+  }
   @include at-media('tablet') {
     @include grid-col(6);
   }
@@ -196,7 +197,7 @@ h2 {
   }
   picture img {
     width: 100%;
-    @include u-height(8);
+    @include u-height('card');
     object-fit: cover;
     object-position: center 37%;
   }
@@ -254,13 +255,14 @@ $blue-50: #2378c3;
     @include u-color('indigo-cool-80v');
   }
   &__prod {
-    @include u-color('red-warm-50v');
+    @include u-color('red-cool-50v');
   }
 }
 
 .coil-help-list {
   position: relative;
   list-style-type: '\2713';
+  z-index: -1;
   li {
     @include u-padding-left(1);
   }
@@ -290,6 +292,7 @@ $blue-50: #2378c3;
 
 .abstract-icon {
   @include u-maxh(15);
+  @include u-margin-top(6);
 }
 
 /**********
